--- a/forum.html
+++ b/forum.html
@@ -21,18 +21,19 @@
 
     <!-- Giscus kodunu buraya yapıştır -->
     <script src="https://giscus.app/client.js"
-            data-repo="amk579/ucusdanismani-forum"
-            data-repo-id="BURAYA_GELECEK"
-            data-category="General"
-            data-category-id="BURAYA_GELECEK"
-            data-mapping="pathname"
-            data-reactions-enabled="1"
-            data-emit-metadata="0"
-            data-input-position="bottom"
-            data-theme="light"
-            data-lang="tr"
-            crossorigin="anonymous"
-            async>
+        data-repo="amk579/ucusdanismani-forum"
+        data-repo-id="R_kgDOPjF7kA"
+        data-category="General"
+        data-category-id="DIC_kwDOPjF7kM4CuhGU"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="noborder_dark"
+        data-lang="tr"
+        crossorigin="anonymous"
+        async>
     </script>
 
     <div class="card tip">
