--- a/forum.html
+++ b/forum.html
@@ -21,10 +21,10 @@
 
     <!-- Giscus kodunu buraya yapıştır -->
     <script src="https://giscus.app/client.js"
-        data-repo="amk579/ucusdanismani-forum"
-        data-repo-id="R_kgDOPjF7kA"
+        data-repo="amk579/ucusdanismani.github.io"
+        data-repo-id="R_kgDOPhzf2w"
         data-category="General"
-        data-category-id="DIC_kwDOPjF7kM4CuhGU"
+        data-category-id="DIC_kwDOPhzf284CuhFe"
         data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
