--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -71,6 +70,8 @@
     <h1 class="title">RC Uçak & Drone Takımlarına Danışmanlık</h1>
     <p class="subtitle">Teknofest yolculuğunuzda ücretsiz teknik ve uçuş danışmanlığı desteği alarak bir adım öne çıkın.</p>
     <a class="btn" href="#form">Destek Almak İçin Formu Doldur</a>
+    <!-- YENİ: Forum butonu -->
+    <a class="btn" style="background:#1B1F3B" href="forum.html">Foruma Git</a>
   </header>
 
   <main class="container">
@@ -78,6 +79,7 @@
     <section class="about">
       <h2>Hakkımda</h2>
       <p><strong>Ad Soyad:</strong> Salih Çınar<br>
+         <strong>Telefon:</strong> +90 552 723 67 85<br>
          <strong>E‑posta:</strong> <a href="mailto:salihcinar1295@gmail.com">salihcinar1295@gmail.com</a></p>
       <p>4 yıldır RC uçaklar ve FPV drone pilotluğu üzerine çalışıyorum. Hem mekanik hem de yazılım alanlarında tecrübe sahibiyim.
          Teknofest'e hazırlanan takımlarla çeşitli projelerde aktif olarak görev aldım. 2023 yılında Teknofest Döner Kanat kategorisinde
@@ -184,6 +186,8 @@
         <p><a target="_blank" href="https://www.youtube.com/@Salih%C3%87%C4%B1nar-c1u">YouTube: Sanal Tecrübeler</a></p>
         <p>Instagram | YouTube | LinkedIn: <b>@ucusdanismani</b></p>
       </div>
+      <!-- İsteğe bağlı: buraya küçük bir forum tanıtım linki de koyabiliriz -->
+      <p><a class="btn" style="background:#1B1F3B" href="forum.html">→ Topluluk Forumuna Katıl</a></p>
     </section>
 
   </main>
@@ -191,6 +195,8 @@
   <div class="cta-bar">
     <a class="btn" href="#form">Hemen Başvur</a>
     <a class="btn" style="background:#1B1F3B" target="_blank" href="https://wa.me/905527236785">WhatsApp'tan Yaz</a>
+    <!-- YENİ: Alt çubukta forum -->
+    <a class="btn" style="background:#1B1F3B" href="forum.html">Foruma Katıl</a>
   </div>
 
   <footer>
