--- a/index.html
+++ b/index.html
@@ -1,205 +1,131 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta name="google-site-verification" content="MJmLFXvtYpOKfXmbwpLxlrdZtAGnoJtAdSGa79sBBes" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RC Uçak & Drone Danışmanlığı - Salih Çınar</title>
+  <meta name="theme-color" content="#2a235d">
   <style>
     :root{
-      --bg:#F1FAEE;
-      --text:#1B1F3B;
-      --accent:#E63946;
-      --card:#ffffff;
+      --bg1:#1e1a3a;
+      --bg2:#2d2a65;
+      --glass:#ffffff15;
+      --border:#ffffff40;
+      --ink:#f5f7ff;
+      --ink-soft:#d0d4f7;
+      --shadow:0 18px 50px rgba(0,0,0,.55);
+      --btn1:#5560ff;
+      --btn2:#2b2f6e;
+      --mint1:#3df1c6;
+      --mint2:#00b784;
     }
     *{box-sizing:border-box}
     body{
       margin:0;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Poppins, Arial, sans-serif;
-      background:var(--bg);
-      color:var(--text);
-      line-height:1.6;
+      font-family:"Segoe UI", Roboto, Arial, sans-serif;
+      color:var(--ink);
+      background:linear-gradient(180deg,var(--bg1),var(--bg2));
+      background-attachment:fixed;
     }
-    .container{max-width: 980px; margin: 0 auto; padding: 24px;}
-    header.hero{
-      padding: 56px 24px 40px;
-      text-align:center;
-    }
-    header .title{
-      font-weight:800; font-size: clamp(28px, 4vw, 40px); color: var(--accent); margin:0 0 12px;
-    }
-    header .subtitle{font-size: clamp(16px, 2.5vw, 20px); opacity:.9; margin: 0 auto 24px; max-width: 780px;}
-    .btn{
-      display:inline-block; padding: 12px 20px; border-radius: 12px; text-decoration:none;
-      background: var(--accent); color: #fff; font-weight: 600; box-shadow: 0 8px 20px rgba(230,57,70,.25);
-      transition: transform .1s ease, box-shadow .2s ease;
-    }
-    .btn:hover{ transform: translateY(-1px); box-shadow: 0 12px 28px rgba(230,57,70,.33); }
-    section{ padding: 24px 0; }
-    h2{ color: var(--accent); margin: 8px 0 12px; }
-    .grid{ display:grid; gap:16px; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); }
-    .card{ background: var(--card); border-radius: 16px; padding:16px; box-shadow:0 6px 18px rgba(0,0,0,.06); }
-    .badge{ display:inline-block; background:#ffe9eb; color:var(--accent); padding:4px 10px; border-radius:999px; font-size:12px; font-weight:700; letter-spacing:.3px }
-    .about p{margin:.4rem 0;}
-    .list{margin:0; padding-left: 18px}
-    .cta-bar{
-      position:sticky; bottom:0; background: rgba(241,250,238,.9); backdrop-filter: blur(6px);
-      border-top: 1px solid #e9ecef; padding: 10px 16px; display:flex; gap:12px; justify-content:center;
-    }
-    form.contact{
-      background: var(--card); padding:16px; border-radius:16px; box-shadow:0 6px 18px rgba(0,0,0,.06);
-    }
-    .field{ display:flex; flex-direction:column; margin-bottom:12px}
-    .field label{ font-size:13px; font-weight:700; margin-bottom:6px }
-    .field input, .field select, .field textarea{
-      padding:12px; border-radius:12px; border:1px solid #dfe3e6; font:inherit; background:#fff;
-    }
-    .floating-wa{
-      position: fixed; right: 16px; bottom: 88px; text-decoration:none; background:#25D366; color:#fff;
-      padding: 12px 14px; border-radius: 999px; font-weight:700; box-shadow:0 10px 24px rgba(37,211,102,.35);
-    }
-    footer{ padding: 24px 0 40px; text-align:center; opacity:.8 }
+    .container{max-width:1100px;margin:0 auto;padding:24px}
+    .glass{background:var(--glass);backdrop-filter:blur(14px) saturate(140%);border:1px solid var(--border);border-radius:22px;box-shadow:var(--shadow)}
+    header.hero{margin:26px;padding:22px}
+    .brand-row{display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap}
+    .brand{font-weight:900;letter-spacing:.2px;color:var(--ink-soft);font-size:28px}
+    nav a{color:var(--ink);text-decoration:none;font-weight:700;padding:10px 14px;border-radius:10px;background:#ffffff22;margin-left:6px}
+    nav a:hover{background:#ffffff33}
+    .hero-main{text-align:center;padding:14px}
+    .title{font-size:clamp(28px,5vw,50px);margin:8px 0;color:#fff}
+    .subtitle{font-size:clamp(16px,2.5vw,20px);opacity:.9}
+    .cta{display:flex;gap:12px;justify-content:center;flex-wrap:wrap;margin-top:18px}
+    .btn{padding:12px 20px;border-radius:999px;text-decoration:none;font-weight:900;
+      color:#fff;background:linear-gradient(180deg,var(--btn1),var(--btn2));}
+    .btn:hover{opacity:.85}
+    .btn.mint{background:linear-gradient(180deg,var(--mint1),var(--mint2))}
+    .section{margin:26px;padding:20px}
+    h2{color:#fff;margin-bottom:12px}
+    .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(270px,1fr))}
+    .card{padding:16px;border-radius:18px;background:#ffffff10;border:1px solid #ffffff30}
+    form.contact input,form.contact select,form.contact textarea{padding:12px;border-radius:12px;border:1px solid #ccc;width:100%}
+    .cta-bar{position:sticky;bottom:0;margin:0 26px 26px;padding:12px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap}
+    .floating-wa{position:fixed;right:18px;bottom:92px;background:linear-gradient(180deg,#3df1c6,#00b784);color:#fff;padding:12px 14px;border-radius:999px;font-weight:900;text-decoration:none}
+    footer{text-align:center;padding:26px;font-size:14px;opacity:.8}
   </style>
 </head>
 <body>
 
   <a class="floating-wa" href="https://wa.me/905527236785" target="_blank">WhatsApp</a>
 
-  <header class="hero container">
-    <p class="badge">Ücretsiz destek</p>
-    <h1 class="title">RC Uçak & Drone Takımlarına Danışmanlık</h1>
-    <p class="subtitle">Teknofest yolculuğunuzda ücretsiz teknik ve uçuş danışmanlığı desteği alarak bir adım öne çıkın.</p>
-    <a class="btn" href="#form">Destek Almak İçin Formu Doldur</a>
-    <!-- YENİ: Forum butonu -->
-    <a class="btn" style="background:#1B1F3B" href="forum.html">Foruma Git</a>
+  <header class="hero glass">
+    <div class="container">
+      <div class="brand-row">
+        <div class="brand">RC Uçuş Danışmanı</div>
+        <nav>
+          <a href="#hizmetler">Hizmetler</a>
+          <a href="#form">Başvuru</a>
+          <a href="forum.html">Forum</a>
+        </nav>
+      </div>
+      <div class="hero-main">
+        <p class="subtitle">Ücretsiz destek</p>
+        <h1 class="title">RC Uçak & Drone Takımlarına Danışmanlık</h1>
+        <p class="subtitle">Teknofest yolculuğunuzda ücretsiz teknik ve uçuş danışmanlığı desteğiyle öne çıkın.</p>
+        <div class="cta">
+          <a class="btn" href="#form">Destek Al</a>
+          <a class="btn mint" href="forum.html">Foruma Git</a>
+        </div>
+      </div>
+    </div>
   </header>
 
   <main class="container">
-
-    <section class="about">
+    <section id="hakkimda" class="section glass">
       <h2>Hakkımda</h2>
-      <p><strong>Ad Soyad:</strong> Salih Çınar<br>
-         <strong>E‑posta:</strong> <a href="mailto:salihcinar1295@gmail.com">salihcinar1295@gmail.com</a></p>
-      <p>4 yıldır RC uçaklar ve FPV drone pilotluğu üzerine çalışıyorum. Hem mekanik hem de yazılım alanlarında tecrübe sahibiyim.
-         Teknofest'e hazırlanan takımlarla çeşitli projelerde aktif olarak görev aldım. 2023 yılında Teknofest Döner Kanat kategorisinde
-         Türkiye 3.'lüğü elde ettim. Şu anda bu bilgi ve tecrübeyi başka takımlarla <b>gönüllü olarak</b> paylaşıyorum.</p>
-      <p><a class="btn" style="background:#1B1F3B" target="_blank" href="https://www.teknofest.org/tr/yarismalar/competition_report_detail/3174">Teknofest 2023 Sonuç Raporu</a></p>
+      <p><strong>Salih Çınar</strong></p>
+      <p>4 yıldır RC uçaklar ve FPV drone pilotluğu üzerine çalışıyorum. Hem mekanik hem de yazılım alanlarında tecrübe sahibiyim. 
+      Teknofest'e hazırlanan takımlarla çeşitli projelerde aktif olarak görev aldım. 2023 yılında Teknofest Döner Kanat kategorisinde Türkiye 3.'lüğü elde ettim. 
+      Şu anda bu bilgi ve tecrübeyi başka takımlarla gönüllü olarak paylaşıyorum.</p>
+      <p><b>E-posta:</b> <a href="mailto:salihcinar1295@gmail.com">salihcinar1295@gmail.com</a></p>
     </section>
 
-    <section>
+    <section id="hizmetler" class="section glass">
       <h2>Hizmetler</h2>
       <div class="grid">
-        <div class="card">
-          <h3>Tasarım & Malzeme</h3>
-          <ul class="list">
-            <li>Kanat yapısı, itki sistemi, iniş takımları</li>
-            <li>Malzeme ve elektronik seçimi</li>
-          </ul>
-        </div>
-        <div class="card">
-          <h3>Simülasyon & Yazılım</h3>
-          <ul class="list">
-            <li>Simülasyon ayarları ve uçuş fiziği</li>
-            <li>PID & kontrol parametreleri</li>
-          </ul>
-        </div>
-        <div class="card">
-          <h3>Pilotaj Desteği</h3>
-          <ul class="list">
-            <li>FPV ve sabit kanat uçuş eğitimi</li>
-            <li>Video analizi ile geri bildirim</li>
-          </ul>
-        </div>
+        <div class="card"><h3>Tasarım & Malzeme</h3><p>Kanat yapısı, itki sistemi, malzeme ve elektronik seçimi</p></div>
+        <div class="card"><h3>Simülasyon & Yazılım</h3><p>Simülasyon ayarları, PID & kontrol parametreleri</p></div>
+        <div class="card"><h3>Pilotaj</h3><p>FPV & sabit kanat uçuş eğitimi, video analizi</p></div>
       </div>
     </section>
 
-    <section id="form">
+    <section id="form" class="section glass">
       <h2>Danışmanlık Talep Formu</h2>
-      <!-- ÇALIŞAN FORM: FormSubmit ile e‑posta gönderimi (ücretsiz). İlk gönderimde e‑posta doğrulaması istenir. -->
       <form class="contact" action="https://formsubmit.co/salihcinar1295@gmail.com" method="POST">
-        <!-- spam koruması -->
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_subject" value="Yeni Başvuru - RC Danışmanlık">
         <div class="grid">
-          <div class="field">
-            <label for="team">Takım adı</label>
-            <input id="team" name="Takım adı" required placeholder="Örn: AYAKALA / Roket Team">
-          </div>
-          <div class="field">
-            <label for="city">Şehir</label>
-            <input id="city" name="Şehir" required placeholder="İl / İlçe">
-          </div>
-          <div class="field">
-            <label for="category">Kategori</label>
-            <select id="category" name="Kategori" required>
-              <option value="">Seçiniz</option>
-              <option>Sabit kanat</option>
-              <option>Döner kanat (Drone)</option>
-              <option>Otonom görev</option>
-              <option>Diğer</option>
-            </select>
-          </div>
-          <div class="field">
-            <label for="level">Uçuş seviyesi</label>
-            <select id="level" name="Seviye">
-              <option>Başlangıç</option>
-              <option>Orta</option>
-              <option>İleri</option>
-            </select>
-          </div>
-          <div class="field">
-            <label for="email">İletişim e‑postası</label>
-            <input id="email" type="email" name="E‑posta" required placeholder="ornek@takim.com">
-          </div>
-          <div class="field">
-            <label for="message">Mesaj</label>
-            <textarea id="message" name="Mesaj" rows="4" placeholder="Kısaca destek ihtiyacınızı yazın..."></textarea>
-          </div>
+          <div><label>Takım adı</label><input name="Takım adı" required></div>
+          <div><label>Şehir</label><input name="Şehir" required></div>
+          <div><label>E-posta</label><input type="email" name="E-posta" required></div>
+          <div style="grid-column:1/-1"><label>Mesaj</label><textarea name="Mesaj" rows="3"></textarea></div>
         </div>
-        <button class="btn" type="submit">Başvuruyu Gönder</button>
-        <p style="font-size:12px;opacity:.7;margin-top:8px">Not: İlk başvuruda e‑posta adresine doğrulama gelir. Onayladıktan sonra yeni başvurular direkt iletilir.</p>
+        <button class="btn" type="submit">Gönder</button>
       </form>
-
-      <p style="margin-top:12px">Google Form mu istiyorsun? Mevcut bir form bağlantını buraya eklemek istersen, butonu şu şekilde kullanabilirsin:</p>
-      <p><a class="btn" href="#" id="gformBtn">Google Formu Aç</a></p>
-      <script>
-        // Google Form linkin varsa buraya tek satırda yapıştır:
-        var GOOGLE_FORM_LINK = ""; // örn: "https://docs.google.com/forms/d/e/...../viewform"
-        if(!GOOGLE_FORM_LINK){ document.getElementById('gformBtn').style.display='none'; }
-        else { document.getElementById('gformBtn').href = GOOGLE_FORM_LINK; }
-      </script>
     </section>
 
-    <section>
-      <h2>Sıkça Sorulanlar</h2>
-      <div class="grid">
-        <div class="card"><b>Danışmanlık ücretsiz mi?</b><br>Evet, öğrenci takımlarına tamamen ücretsiz.</div>
-        <div class="card"><b>Ne kadar sürede dönüş olur?</b><br>Genellikle 24 saat içinde geri dönüş sağlıyorum.</div>
-        <div class="card"><b>Nerelerde destek?</b><br>Uzaktan video/çağrı ve WhatsApp üzerinden.</div>
-      </div>
+    <section class="section glass">
+      <h2>Bağlantılar</h2>
+      <p>🔗 <a href="https://tr.linkedin.com/in/salih-cinar-140114343?trk=people-guest_people_search-card" target="_blank">LinkedIn Profilim</a></p>
+      <p>🎥 <a href="https://www.youtube.com/@humaiha3860" target="_blank">YouTube Kanalım</a></p>
+      <p>🎥 <a href="https://www.youtube.com/channel/UClr8o0Rqdv7b7OOFsyGw3Zg" target="_blank">İkinci YouTube Kanalım</a></p>
     </section>
-
-    <section>
-      <h2>Sosyal Medya</h2>
-      <div class="card">
-        <p><a target="_blank" href="https://www.youtube.com/@Salih%C3%87%C4%B1nar-c1u">YouTube: Sanal Tecrübeler</a></p>
-        <p>Instagram | YouTube | LinkedIn: <b>@ucusdanismani</b></p>
-      </div>
-      <!-- İsteğe bağlı: buraya küçük bir forum tanıtım linki de koyabiliriz -->
-      <p><a class="btn" style="background:#1B1F3B" href="forum.html">→ Topluluk Forumuna Katıl</a></p>
-    </section>
-
   </main>
 
-  <div class="cta-bar">
-    <a class="btn" href="#form">Hemen Başvur</a>
-    <a class="btn" style="background:#1B1F3B" target="_blank" href="https://wa.me/905527236785">WhatsApp'tan Yaz</a>
-    <!-- YENİ: Alt çubukta forum -->
-    <a class="btn" style="background:#1B1F3B" href="forum.html">Foruma Katıl</a>
+  <div class="cta-bar glass">
+    <a class="btn" href="#form">Başvuru</a>
+    <a class="btn mint" href="forum.html">Forum</a>
   </div>
 
   <footer>
-    <small>© 2025 Salih Çınar — Öğrenci takımlarına ücretsiz danışmanlık.</small>
+    © 2025 Salih Çınar — Öğrenci takımlarına ücretsiz danışmanlık.
   </footer>
 </body>
 </html>
